# simplezarr

./: .gitignore  Cargo.toml  README.md
src/: array.rs  error.rs  group.rs  lib.rs  store.rs  types.rs  v2.rs
src/codecs/: blosc.rs  bytes.rs  fixedscaleoffset.rs  gzip.rs  lz4.rs  mod.rs  sharding.rs  zlib.rs  zstd.rs
src/metadata/: mod.rs  v2.rs
tests/: integration_v2.rs
zarrgentest/: main.py  pyproject.toml
