[package]
name = "simplezarr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
half = "2"
num-complex = "0.4"
flate2 = "1"
zstd = "0.13"
lz4_flex = "0.11"
blusc = "0.0.2"
byteorder = "1"
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
object_store = "0.13.1"
