[package]
name = "simplezarr"
version = "0.1.3"
edition = "2024"
license = "MIT"
authors = ["Benjamin Sobel <7thof14217@gmail.com>"]
repository = "https://github.com/UserNobody14/simplezarr"
description = "A simple Zarr (V2) implementation in Rust"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
half = "2"
num-complex = "0.4"
flate2 = "1"
zstd = "0.13"
lz4_flex = "0.11"
blosc-src = { version = "0.3.6", features = ["snappy", "lz4", "zlib", "zstd"]}
byteorder = "1"
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
object_store = "0.13.1"
