[project]
name = "zarrgentest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.24.1",
    "xarray>=2025.3.0",
    "zarr>=3.0.6",
    "numcodecs>=0.11.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
